RESOLVED FIXED306227
Missing include in MediaPlayerPrivateGStreamer.cpp
https://bugs.webkit.org/show_bug.cgi?id=306227
Summary Missing include in MediaPlayerPrivateGStreamer.cpp
Mike Gorse
Reported 2026-01-25 13:44:11 PST
After R303539, MediaPlayerPrivateGStreamer.cpp uses WEBKIT_DEFINE_ASYNC_DATA_STRUCT, which is defined in wtf/glib/WTFGType.h.
Attachments
Mike Gorse
Comment 1 2026-01-25 13:50:24 PST
EWS
Comment 2 2026-01-25 14:55:33 PST
Committed 306174@main (5ab3afadbd3c): <https://commits.webkit.org/306174@main> Reviewed commits have been landed. Closing PR #57217 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-25 14:56:13 PST
Note You need to log in before you can comment on or make changes to this bug.