Missing include in MediaPlayerPrivateGStreamer.cpp https://bugs.webkit.org/show_bug.cgi?id=306227

Reviewed by Adrian Perez de Castro.

After R303539, MediaPlayerPrivateGStreamer.cpp uses
WEBKIT_DEFINE_ASYNC_DATA_STRUCT, which is defined in wtf/glib/WTFGType.h.

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:

Canonical link: https://commits.webkit.org/306174@main